# django-template-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflow/: lint.yml
app/: settings.py  urls.py
