[project]
name = "django-template-api"
version = "0.1.0"
description = "Base template for django api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-structlog>=9.1.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "psycopg[binary]>=3.2.9",
    "uvicorn>=0.35.0",
    "werkzeug>=3.1.3",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.2",
]

[tool.uv]
default-groups = []

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    "*/migrations/*",
    "celery.py",
    "manage.py",
    "asgy.py"
]

line-length = 121
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "T20", "PL", "B", "A", "C4", "TID", "ERA", "RET", "W", "C90", "ARG", "DJ", "Q", "FLY", "SIM", "COM", "D"]
ignore = ["D104", "D212"]

[tool.ruff.lint.pylint]
max-args=10

[tool.ruff.format]
exclude = ["migrations"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--ds=app.settings --reuse-db --no-migrations --diff-width=88 -vv -n auto --dist=loadscope --durations=5 --disable-warnings --cov=. --cov-report=xml --cov-report=term"


[tool.coverage.run]
omit = [
  "**/__init__.py",
  "**/asgi.py",
  "**/wsgi.py",
  "**/manage.py",
  "**/migrations/**"
]
